src/objects/Standard_Best_Practices__c.object
<CustomObject>
    <fields>
        <fullName>Applicable_To_Text_Version__c</fullName>
        <description>Converts the Multi-select picklist field Assigned To into a text string, so that the values can be used in other places.</description>
        <formula>IF( INCLUDES( Applicable_To__c ,&quot;Family Child Care&quot;), &quot;Family Child Care&quot;, NULL) &amp;
IF( INCLUDES( Applicable_To__c ,&quot;Small Group&quot;), &quot;; Small Group&quot;, NULL) &amp;
IF( INCLUDES( Applicable_To__c ,&quot;Large Group&quot;), &quot;; Large Group&quot;, NULL) &amp;
IF( INCLUDES( Applicable_To__c ,&quot;Foster Care Agency&quot;), &quot;; Foster Care Agency&quot;, NULL) &amp;
IF( INCLUDES( Applicable_To__c ,&quot;Adoption Agency&quot;), &quot;; Adoption Agency&quot;, NULL) &amp;
IF( INCLUDES( Applicable_To__c ,&quot;Temporary Shelter&quot;), &quot;; Temporary Shelter&quot;, NULL) &amp;
IF( INCLUDES( Applicable_To__c ,&quot;Group Care&quot;), &quot;; Group Care&quot;, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicable To Text Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicable_To__c</fullName>
        <description>These picklist values are same as list of items in Applicable To picklist in Standard Visit Item</description>
        <label>Applicable To</label>
        <picklist>
            <picklistValues>
                <fullName>Family Child Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foster Care Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adoption Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary Shelter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Care</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Best_Practice_Guidance__c</fullName>
        <label>Best Practice Guidance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <description>These picklist values are same as the list of domains in the Standard Visit Item</description>
        <label>Domain</label>
        <picklist>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behavior Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRC Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Care of Children</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Curriculum and Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Preparedness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipments and Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Involvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foster/Adoptive Child Records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foster/Adoptive Home Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foster/Adoptive Parent Records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foster Children Records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foster Parent Records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General records/logs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health/Medications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health and Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infection Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inspections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interactions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mealtime, Food, Food Preparation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Hygiene</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personnel Records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical Facility - Indoors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical Facility - Outdoors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical Plant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Standard Best Practices</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Applicable_To__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Best Practice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Standard Best Practices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>